--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -33,8 +33,11 @@
   }
 
   ul {
+    align-items: center;
     display: flex;
+    flex-wrap: wrap;
     justify-content: space-evenly;
+    padding: 0;
   }
 
   li {
