--- a/sass/layout/_main.scss
+++ b/sass/layout/_main.scss
@@ -65,6 +65,7 @@ main {
 
   li {
     @include config.font-settings('code');
+    font-size: var(--code);
     list-style: none;
     margin: var(--half-shim) var(--shim);
   }
