--- a/sass/molecules/_icons.scss
+++ b/sass/molecules/_icons.scss
@@ -27,6 +27,7 @@ svg {
     padding: var(--shim) var(--gutter);
     text-decoration: none;
     transition: box-shadow 150ms ease-out;
+    white-space: nowrap;
   }
 
   &:hover,
